# EPICpy

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  EPICpy_TODO.md  MANIFEST.in  Makefile  ReadMe.md  Workflow.md  build_linux.sh  build_mac.sh  exact_requirements.txt  freeze_linux.sh  freeze_macos.sh  freeze_windows.bat  frozen_requirements.txt  onetime_resource_setup.py  package_linux.sh  pyproject.toml  requirements.txt  setup.py
article/: paper.bib  paper.md
epicpy/: __init__.py  cli.py  main.py
epicpy/constants/: emoji.py  state_constants.py  version.py
epicpy/dialogs/: about_window.py  aboutwindow.py  application_dialog.py  applicationdialog.py  break_settings_window.py  breaksettingswindow.py  device_settings_window.py  devicesettingswindow.py  display_controls_window.py  displaycontrolswindow.py  epiclib_settings_window.py  epiclibsettingswindow.py  font_size_window.py  fontsizewindow.py  logging_window.py  loggingwindow.py  run_settings_window.py  runsettingswindow.py  search_window.py  searchwindow.py  snd_text_settings_window.py  sndtextsettingswindow.py  texteditchoicewindow.py  trace_settings_window.py  tracesettingswindow.py
epicpy/epic/: encoder_passthru.py  encoderpassthru.py  epic_simulation.py  epiclib_words.py  epiclibwords.py  epicpy_exception.py  epicpyexception.py  epicsimulation.py  parallel_simulation.py  run_info.py  runinfo.py
epicpy/epiccoder/: aboutui.py  aboutwindow.py  customeditor.py  duplicatedlg.py  duplicateui.py  fuzzy_searcher.py  lexer.py  mainwindow.py
epicpy/epiclib/: epiclib.pyd
epicpy/launcher/: linux_launcher.py  macos_launcher.py  windows_launcher.py
epicpy/uifiles/: about_ui.py  aboutui.py  aboutui.ui  breaksettingsui.py  breaksettingsui.ui  devicesettingsui.py  devicesettingsui.ui  display_controls_ui.py  displaycontrolsui.py  displaycontrolsui.ui  epiclib_settings_ui.py  epiclibsettingsui.py  epiclibsettingsui.ui  font_size_ui.py  fontsizeui.py  fontsizeui.ui  logging_ui.py  loggingui.py  loggingui.ui  main_ui.py  mainui.py  mainui.ui  process_ui_files.py  run_settings_ui.py  runsettingsui.py  runsettingsui.ui  search_ui.py  searchui.py  searchui.ui  snd_text_settings_ui.py  sndtextsettingsui.py  sndtextsettingsui.ui  statsui.py  statsui.ui  texteditorui.py  texteditorui.ui  trace_settings_ui.py  trace_ui.py  tracesettingsui.py  tracesettingsui.ui  (+2 more)
epicpy/utils/: app_utils.py  apputils.py  config.py  defaultfont.py  device_pyee_bridge.py  fitness.py  localmunch.py  module_reloader.py  modulereloader.py  param_utils.py  resource_utils.py  splash_screen.py  splashscreen.py  syspath_manage.py  update_utils.py  view_search.py  viewsearch.py
epicpy2/: __init__.py  main.py
src/: apputils.py  c2pytees.py  cachedplaintextedit.py  encoderpassthru.py  epicpyexception.py  epicsimulation.py  fitness.py  main.py  mainwindow.py  outputsorter.py  tracewindow.py  version.py
(+425 files in other folders)
